compile well now

--- a/example.bib
+++ b/example.bib
@@ -39,23 +39,35 @@
     journal = {Proc. Natl. Acad. Sci. USA.},
     year = {1979},
     volume = {76},
-    pages = {6062}
+    pages = {6062-6065},
+    doi = {https://doi.org/10.1073/pnas.76.12.6062},
+    url = {https://www.pnas.org/content/76/12/6062.short}
 }
 @ARTICLE{AWO03,
     author = {A. W. Omta and M. F. Kropman and S. Woutersen and H. J. Bakker},
     title = {{Negligible Effect of Ions on the Hydrogen-Bond Structure in Liquid Water}},
     journal = {Science},
-    year = {03},
+    year = {2003},
     volume = {301},
-    pages = {347}
+    pages = {347},
+    doi = {10.1126/science.1084801},
+    url = {https://science.sciencemag.org/content/301/5631/347}
 }
-@ARTICLE{ASeidl,
-    author = {A. Seidl},
-    title = {{Generalized Kohn-Sham Schemes and the Band-Gap Problem}},
-    journal = {Phys. Rev. B},
-    year = {1996},
+@article{Seidl1996,
+    abstract = {As an alternative to the standard Kohn-Sham procedure, other exact realizations of density-functional theory (generalized Kohn-Sham methods) are presented. The corresponding generalized Kohn-Sham eigenvalue gaps are shown to incorporate part of the discontinuity (Formula presented) of the exchange-correlation potential of standard Kohn-Sham theory. As an example, a generalized Kohn-Sham procedure splitting the exchange contribution to the total energy into a screened, nonlocal and a local density component is considered. This method leads to band gaps far better than those of local-density approximation and to good structural properties for the materials Si, Ge, GaAs, InP, and InSb. {\textcopyright} 1996 The American Physical Society.},
+    author = {Seidl, A. and G{\"{o}}rling, A. and Vogl, P. and Majewski, J. and Levy, M.},
+    doi = {10.1103/PhysRevB.53.3764},
+    url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.53.3764},
+    file = {:home/gang/Nutstore Files/Ref{\_}by{\_}name/S/Seidl1996.pdf:pdf},
+    issn = {1550235X},
+    journal = {Physical Review B - Condensed Matter and Materials Physics},
+    mendeley-groups = {thesis{\_}1},
+    number = {7},
+    pages = {3764--3774},
+    pmid = {9983927},
+    title = {{Generalized Kohn-Sham schemes and the band-gap problem}},
     volume = {53},
-    pages = {3764}
+    year = {1996}
 }
 @ARTICLE{Silvestrelli1999,
     author={P. L. Silvestrelli and M. Parrinello},
@@ -64,7 +76,9 @@
     year={1999},
     volume={82},
     number={16},
-    pages = {3308}
+    pages = {3308-3311},
+    doi = {https://doi.org/10.1103/PhysRevLett.82.3308},
+    url = {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.82.3308}
 }
 @ARTICLE{Yamamoto2008,
     author = {S. Yamamoto and H. Bluhm and K. Andersson and G. Ketteler and H. Ogasawara and M. Salmeron and A. Nilsson},
@@ -73,15 +87,22 @@
     year = {2008},
     volume = {20},
     number = {18},
-    pages = {184025}
+    pages = {184025},
+    doi = {https://doi.org/10.1088/0953-8984/20/18/184025},
+    url = {https://iopscience.iop.org/article/10.1088/0953-8984/20/18/184025/meta}
 }
-@ARTICLE{Salmeron2009,
-    author = {M. Salmeron and H. Bluhm and M. Tatarkhanov and G. Ketteler and T. K. Shimizu and A. Mugarza and X. Deng and T. Herranz and S. Yamamoto and A. Nilsson},
-    title = {{Water Growth on Metals and Oxides: Binding, Dissociation and Role of Hydroxyl Groups}},
-    journal = {Faraday Discuss.},
-    year = {2009},
-    volume = {141},
-    pages = {221-229}
+@Article{Salmeron2009,
+author ="Salmeron, M. and Bluhm, H. and Tatarkhanov, M. and Ketteler, G. and Shimizu, T. K. and Mugarza, A. and Deng, Xingyi and Herranz, T. and Yamamoto, S. and Nilsson, A.",
+title  ="Water Growth on Metals and Oxides: Binding{,} Dissociation and Role of Hydroxyl Groups",
+journal  ="Faraday Discuss.",
+year  ="2009",
+volume  ="141",
+issue  ="0",
+pages  ="221-229",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/B806516K",
+url  ="http://dx.doi.org/10.1039/B806516K",
+abstract  ="We discuss the role of the presence of dangling H-bonds from water or from surface hydroxyl species on the wetting behavior of surfaces. Using scanning tunneling and atomic force microscopies and photoelectron spectroscopy{,} we have examined a variety of surfaces{,} including mica{,} oxides and pure metals. We find that in all cases{,} the availability of free{,} dangling H-bonds at the surface is crucial for the subsequent growth of wetting water films. In the case of mica{,} electrostatic forces and H-bonding to surface O atoms determine the water orientation in the first layer and also in subsequent layers with a strong influence in its wetting characteristics. In the case of oxides like TiO2{,} Cu2O{,} SiO2 and Al2O3{,} surface hydroxyls form readily on defects upon exposure to water vapor and help nucleate the subsequent growth of molecular water films. On pure metals{,} such as Pt{,} Pd and Ru{,} the structure of the first water layer and whether or not it exhibits dangling H-bonds is again crucial. Dangling H-bonds are provided by molecules with their plane oriented vertically{,} or by OH groups formed by the partial dissociation of water. By tying the two H atoms of the water molecules into strong H-bonds with pre-adsorbed O on Ru can also quench the wettability of the surface."
 }
 @ARTICLE{Balajka2018,
     author = {J. Balajka and M. A. Hines and W. J. I. DeBenedetti and M. Komora and J. Pavelec and M. Schmid and U. Diebold},
@@ -89,9 +110,11 @@
     journal = {Science},
     year = {2018},
     volume = {361},
-    pages = {786-789}
+    pages = {786-789},
+    doi = {10.1126/science.aat6752},
+    url = {https://science.sciencemag.org/content/361/6404/786}
 }
-@ARTICLE{2002Raymond,
+@ARTICLE{Raymond2002,
     author = {E. A. Raymond and T. L. Tarbuck and G. L. Richmond},
     title = {{Isotopic Dilution Studies of the Vapor/Water Interface as Investigated by Vibrational Sum-Frequency Spectroscopy}},
     journal = {J. Phys. Chem. B},
@@ -114,15 +137,19 @@
     journal = {J. Chem. Phys.},
     year = {2011},
     volume = {135},
-    pages = {124712}
+    pages = {124712},
+    doi = {https://doi.org/10.1063/1.3633239},
+    url = {https://aip.scitation.org/doi/abs/10.1063/1.3633239}
 }
-@ARTICLE{IVS,
+@ARTICLE{Stiopkin2011,
     author = {I. V. Stiopkin and C. Weeraman and P. A. Pieniazek and F. Y. Shalhout and J. L. Skinner and A. V. Benderskii},
     title = {{Hydrogen Bonding at the Water Surface Revealed by Isotopic Dilution Spectroscopy}},
     journal = {Nature},
     year = {2011},
     volume = {474},
-    pages = {192}
+    pages = {192},
+    doi = {https://doi.org/10.1038/nature10173},
+    url = {https://www.nature.com/articles/nature10173}
 }
 @ARTICLE{Marx2000,
     author = {D. Marx and J. Hutter},
@@ -1497,29 +1524,35 @@ pages = {577-587},
 abstract= {{ This paper reviews recent progress in the studies on polymer surfaces/interfaces using sum frequency generation (SFG) vibrational spectroscopy. SFG theory, technique, and some experimental details have been presented. The review is focused on the SFG studies on buried interfaces involving polymer materials, such as polymer–water interfaces and polymer–polymer interfaces. Molecular interactions between polymer surfaces and adhesion promoters as well as biological molecules such as proteins and peptides have also been elucidated using SFG. This review demonstrates that SFG is a powerful technique to characterize molecular level structural information of complicated polymer surfaces and interfaces in situ . Copyright © 2006 Society of Chemical Industry}}
 }
 @ARTICLE{Khatib16,
-author = {R. Khatib and E. H. G. Backus and M. Bonn and M. Perez-Haro and M.-P. Gaigeot and M. Sulpizi},
-title = {{Water Orientation and Hydrogen-Bond Structure at the Fluorite/Water Interface }},
-journal = {Scientific Reports},
-year = {2016},
-volume = {6},
-pages={24287},
-abstract= {{ Water in contact with mineral interfaces is important for a variety of different processes. Here, we present a combined theoretical/experimental study which provides a quantitative, molecular-level understanding of the ubiquitous and important CaF2/water interface. Our results show that, at low pH, the surface is positively charged, causing a substantial degree of water ordering. The surface charge originates primarily from the dissolution of fluoride ions, rather than from adsorption of protons to the surface. At high pH we observe the presence of Ca-OH species pointing into the water. These OH groups interact remarkably weakly with the surrounding water, and are responsible for the “free OH” signature in the VSFG spectrum, which can be explained from local electronic structure effects. The quantification of the surface termination, near-surface ion distribution and water arrangement is enabled by a combination of advanced phase-resolved Vibrational Sum Frequency Generation spectra of CaF2/water interfaces and state-of-the-art ab initio molecular dynamics simulations which include electronic structure effects.}}
+    author = {R. Khatib and E. H. G. Backus and M. Bonn and M. Perez-Haro and M.-P. Gaigeot and M. Sulpizi},
+    title = {{Water Orientation and Hydrogen-Bond Structure at the Fluorite/Water Interface}},
+    journal = {Scientific Reports},
+    year = {2016},
+    volume = {6},
+    pages={24287},
+    doi = {https://doi.org/10.1038/srep24287},
+    url = {https://www.nature.com/articles/srep24287},
+    abstract= {{ Water in contact with mineral interfaces is important for a variety of different processes. Here, we present a combined theoretical/experimental study which provides a quantitative, molecular-level understanding of the ubiquitous and important CaF2/water interface. Our results show that, at low pH, the surface is positively charged, causing a substantial degree of water ordering. The surface charge originates primarily from the dissolution of fluoride ions, rather than from adsorption of protons to the surface. At high pH we observe the presence of Ca-OH species pointing into the water. These OH groups interact remarkably weakly with the surrounding water, and are responsible for the “free OH” signature in the VSFG spectrum, which can be explained from local electronic structure effects. The quantification of the surface termination, near-surface ion distribution and water arrangement is enabled by a combination of advanced phase-resolved Vibrational Sum Frequency Generation spectra of CaF2/water interfaces and state-of-the-art ab initio molecular dynamics simulations which include electronic structure effects.}}
 }
 @ARTICLE{Khatib16b,
-author = {R. Khatib and T. Hasegawa and M. Sulpizi and E. H. G. Backus and M. Bonn and  Y. Nagata},
-title = {{Molecular Dynamics Simulations of SFG Librational Modes Spectra of Water at the Water-Air Interface}},
-journal = {J. Phys. Chem. C },
-year = {2016},
-volume = {120},
-pages = {18665} 
+    author = {R. Khatib and T. Hasegawa and M. Sulpizi and E. H. G. Backus and M. Bonn and  Y. Nagata},
+    title = {{Molecular Dynamics Simulations of SFG Librational Modes Spectra of Water at the Water-Air Interface}},
+    journal = {J. Phys. Chem. C },
+    year = {2016},
+    volume = {120},
+    pages = {18665},
+    doi = {https://doi.org/10.1021/acs.jpcc.6b06371},
+    url = {https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.6b06371}
 }
 @ARTICLE{Khatib2017,
-author = {R. Khatib and M. Sulpizi},
-title = {{Sum Frequency Generation Spectra from Velocity-Velocity Correlation Functions}},
-journal = {J. Phys. Chem. Lett. },
-year = {2017},
-volume = {8},
-pages = {1310-1314}
+    author = {R. Khatib and M. Sulpizi},
+    title = {{Sum Frequency Generation Spectra from Velocity-Velocity Correlation Functions}},
+    journal = {J. Phys. Chem. Lett. },
+    year = {2017},
+    volume = {8},
+    pages = {1310-1314},
+    doi = {https://doi.org/10.1021/acs.jpclett.7b00207},
+    url = {https://pubs.acs.org/doi/abs/10.1021/acs.jpclett.7b00207}
 }
 @BOOK{Che12,
 author = {M. Che and  J. C. V\'edrine(Ed.)},
@@ -1890,7 +1923,9 @@ title = {{Hofmeister Phenomena: An Update on Ion Specificity in Biology}},
 journal = {Chem. Rev.},
 year = {2012},
 volume = {112 },
-pages = {2286-2322}
+pages = {2286--2322},
+doi = {https://doi.org/10.1021/cr200271j},
+url = {https://pubs.acs.org/doi/pdf/10.1021/cr200271j}
 }
 @article{LYH83,
 author = "L.-Y. Hsu and C. E. Nordman",
