--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ headsepline, % Uncomment to get a line under the header
 %\usepackage{fancyhdr}
 \usepackage{eucal}
 \usepackage[below]{placeins}
-\usepackage[english]{babel}
+%\usepackage[english]{babel}
 %\usepackage[usenames, dvipsnames]{color}
 %\usepackage[perpage]{footmisc}
 %\usepackage{multirow}
@@ -186,6 +186,8 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
 \hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
 }
+
+\DeclareUnicodeCharacter{2212}{-} % Minus sign (by Gang Huang)
 
 \begin{document}
 
