--- a/thesis_reference.bib
+++ b/thesis_reference.bib
@@ -418,7 +418,7 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     pages = {C7-13-C7-30}
 }
 @ARTICLE{Sciortino1989,
-    author = {F. Sciortino and S. Pornili},
+    author = {F. Sciortino and S. Fornili},
     title = {{Hydrogen Bond Cooperativity in Simulated Water: Time Dependence Analysis of Pair Interactions}},
     journal = {J. Chem. Phys.},
     year = {1989},
@@ -1877,7 +1877,7 @@ author = {P. Lo Nostro and  B. W. Ninham},
 title = {{Hofmeister Phenomena: An Update on Ion Specificity in Biology}},
 journal = {Chem. Rev.},
 year = {2012},
-volume = {112 },
+volume = {112},
 pages = {2286-2322}
 }
 @article{LYH83,
