Added doi and url for references

--- a/main.tex
+++ b/main.tex
@@ -490,6 +490,7 @@ $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
 $S_{\text{HB}}(t)$ & survival probability of HB & \\
 $t_t$ & temporal resolutions for calculating HB dynamics & \\
 $d$ & thickness of layer of interface (model) & \\
+$\tau$ & time for switching allegiance of a HB & \\
 $\hat{\mu}(t)$ & unit vector of the transition dipole & \\
 $g(\nu)$ & VDOS for selected atoms &  \\
 ${\bf v}$ & velocity of an atom & \\
