new probability distribution is added.

--- a/main.tex
+++ b/main.tex
@@ -84,7 +84,8 @@ headsepline, % Uncomment to get a line under the header
 \lstset{ 
     language=python, % choose the language of the code
     basicstyle=\fontfamily{pcr}\selectfont\footnotesize\color{black},
-    keywordstyle=\color{red}\bfseries, % style for keywords
+    %keywordstyle=\color{red}\bfseries, % style for keywords
+    keywordstyle=\color{black}\bfseries, % style for keywords % Gang
     numbers=none, % where to put the line-numbers
     numberstyle=\tiny, % the size of the fonts that are used for the line-numbers     
     backgroundcolor=\color{white}, % we can also choose: darkgray
@@ -342,8 +343,7 @@ on the the calculation of response functions. I would like to
 thank my colleagues Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their encouragement and assistance.
 
-I am grateful to my parents Dehuai Huang and Yuhua Diao and my brother Jialiang Huang for being there for me during the
-last years.
+I am grateful to my parents and my brother for being there for me during the last years.
 
 The financial supports of the China Scholarship Council and TRR146 are gratefully acknowledged.
 \end{acknowledgements}
