add more results on X-water hydrogen bonds.

--- a/main.tex
+++ b/main.tex
@@ -307,10 +307,10 @@ Both the measured and calculated Vibrational Sum-Frequency Generation (VSFG) spe
 when compared to the pure water/vapor interface.
 This reduction is attributed to the H-bonds established between the \nitrate and the surrounding water molecules at the interface.
 This effects is only related to the presence of \nitrate at the water surface and is not affected by the presence of alkali metal ions.
-I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
-ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
-between the \nitrate and the \Li would produce a red-shifted peak in small water cluster, but its influence is not visible
-neither in the VSFG spectra.
+%I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
+%ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
+%between the \nitrate and the \Li would produce a red-shifted peak in small water cluster, but its influence is not visible
+%neither in the VSFG spectra.
 I have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
 and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion on the water surface.
@@ -517,7 +517,7 @@ $\nu$ & vibrational frequency & \\
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{To my parents, and my brother.} 
+\dedicatory{To my family.} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
@@ -530,11 +530,11 @@ $\nu$ & vibrational frequency & \\
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-%\include{Chapters/chap1/chap1}
-%\include{Chapters/chap2/chap2} 
-%\include{Chapters/chap3/chap3}
-%\include{Chapters/chap4/chap4} 
-%\include{Chapters/chap5/chap5} 
+\include{Chapters/chap1/chap1}
+\include{Chapters/chap2/chap2} 
+\include{Chapters/chap3/chap3}
+\include{Chapters/chap4/chap4} 
+\include{Chapters/chap5/chap5} 
 \include{Chapters/chap6/chap6} 
 %\include{Chapters/chap7/chap7} 
 \include{Chapters/chap8/chap8} 
