--- a/example.bib
+++ b/example.bib
@@ -5424,14 +5424,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {47},
     pages = {558}
 }
-@ARTICLE{FHS75,
-    author = {F. H. Stillinger},
-    title = {{Theory and Molecular Models for Water}},
-    journal = {Adv. Chem. Phys.},
-    year = {1975},
-    volume = {31},
-    pages = {1}
-}
 @ARTICLE{TianCS08,
     author = {C. S. Tian and N. Ji and G. A. Waychunas and Y. R. Shen},
     title = {{Interfacial Structures of Acidic and Basic Aqueous Solutions}},
@@ -8942,6 +8934,20 @@ volume = {30},
 number ={1},
 pages = {89-97},
 url = {https://link.springer.com/content/pdf/10.1007/BF00751454.pdf}
+}
+@article{Nilsson2011,
+title = "Perspective on the Structure of Liquid Water",
+journal = "Chem. Phys.",
+volume = "389",
+number = "1",
+pages = "1 - 34",
+year = "2011",
+issn = "0301-0104",
+doi = "https://doi.org/10.1016/j.chemphys.2011.07.021",
+url = "http://www.sciencedirect.com/science/article/pii/S0301010411003247",
+author = "A. Nilsson and L.G.M. Pettersson",
+keywords = "Water, Structure, X-ray spectroscopy, X-ray scattering, Molecular dynamics simulations",
+abstract = "We present a picture that combines discussions regarding the thermodynamic anomalies in ambient and supercooled water with recent interpretations of X-ray spectroscopy and scattering data of water in the ambient regime. At ambient temperatures most molecules favor a closer packing than tetrahedral, with strongly distorted hydrogen bonds, which allows the quantized librational modes to be excited and contribute to the entropy, but with enthalpically favored tetrahedrally bonded water patches appearing as fluctuations, i.e. a competition between entropy and enthalpy. Upon cooling water the amount of molecules participating in tetrahedral structures and the size of the tetrahedral patches increase. The two local structures are connected to the liquid–liquid critical point hypothesis in supercooled water corresponding to high density liquid and low density liquid. We will discuss the interpretation of X-ray absorption spectroscopy, X-ray emission spectroscopy, wide and small angle X-ray scattering and molecular dynamics simulations in light of the current debate."
 }
 @ARTICLE{ ,
 author = {},
