--- a/main.tex
+++ b/main.tex
@@ -463,7 +463,7 @@ $\omega_{\text{SFG}}$ & frequency of the sum-frequency generation beam & \\
 $\omega_{\text{vis}}$ & frequency of the incident visible beam &  \\
 $\omega_{\text{IR}}$ & frequency of the incident infrared beam &  \\
 $h(t)$ & HB population operator & \\
-$h^{(d)}(t)$ & HB population operator (it is 1 if the tagged molecule pair are closer than $r_{\text{OO}}^{\text{c}}$)& \\
+$h^{(d)}(t)$ & HB population operator (it is 1 if the tagged pair are closer than $r_{\text{OO}}^{\text{c}}$)& \\
 $H(t)$ & HB population operator (continuously)& \\
 $C_{\text{HB}}(t)$ (or $c(t)$) & HB population operator correlation function & \\
 $\omega_{\text{I}}$ & highest nuclear phonon frequency & \\
