The calculation for c, n, k for pure water is done.

--- a/example.bib
+++ b/example.bib
@@ -3475,6 +3475,17 @@ in gas and condensed phases}},
     note = {Textnote in class of thermal dynamics and molcular dynamics simulations, Uni-Mainz},
     year = {2012}
 }
+@ARTICLE{Kessler2015,
+ author = {J. Kessler and H. Elgabarty and T. Spura and K. Karhan and P. Partovi-Azar and A. A. Hassanali and T. D. K{\"u}hne},
+    title = {{Structure and Dynamics of the Instantaneous Water/Vapor Interface Revisited by Path-Integral and Ab Initio Molecular Dynamics Simulations}},
+    journal = {J. Phys. Chem. B},
+    year = {2015},
+    volume = {199},
+    number ={31},
+    pages = {10079-10086},
+    url = {https://pubs.acs.org/doi/10.1021/acs.jpcb.5b04185},
+    doi ={10.1021/acs.jpcb.5b04185}
+}
 @ARTICLE{Pathak08,
  author = {A. K. Pathak and T. Mukherjee and D. K. Maity},
     title = {{Microhydration of NO3-: A theoretical study on structure, stability and IR spectra}},
