--- a/main.tex
+++ b/main.tex
@@ -473,6 +473,7 @@ $C_{\text{HB}}(t)$ (or $c(t)$) & HB population operator correlation function & \
 $\omega_{\text{I}}$ & highest nuclear phonon frequency & \\
 $\theta$ & H-O-H angle in a water molecule&  \\
 $\beta$ & hyperpolarizability; reciprocal temperature & \\
+$h^{s}(t)$ & interfacial HB population operator & \\
 $j(t)$ & integrated flux departing the HB configuration space at time t & \\
 $I_{\text{SFG}}$ & intensity of the sum-frequency generation beam & \\
 $I_{\text{vis}}$ & intensity of the incident visible beam & \\
@@ -554,11 +555,12 @@ $\nu$ & vibrational frequency & \\
 
 %\include{Appendices/AppendixA}
 \include{Chapters/chap_formula/chap_formula}
-\include{Chapters/chap_derivatives/chap_derivatives}
 \include{Chapters/chap_parameters/chap_parameters}
 \include{Chapters/chap_free_energy/chap_free_energy}
 \include{Chapters/chap_thickness/chap_thickness}
 \include{Chapters/chap_hbd_more/chap_hbd_more}
+%\include{Chapters/chap_hkt/chap_hkt}
+\include{Chapters/chap_layering/chap_layering}
 %\include{Appendices/AppendixB}
 
 %----------------------------------------------------------------------------------------
