--- a/example.bib
+++ b/example.bib
@@ -546,7 +546,18 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
      a hydrogen bond in liquid water at room temperature. We show that this dynamics is clearly
      nonexponential, yet virtually uncorrelated with the fluctuations of neighboring bonds. }}
 }
-@ARTICLE{DCR83,
+@ARTICLE{Tanaka1983,
+    author = {H. Tanaka and K. Nakanishi and N. Watanabe},
+    title = {{Constant Temperature Molecular Dynamics Calculation on Lennard-Jones Fluid and Its Application to Water}},
+    journal = {J. Chem. Phys.},
+    year = {1983},
+    volume = {78},
+    number = {5},
+    pages = {2622--2634},
+    doi = {https://doi.org/10.1063/1.445020},
+    URL = {https://aip.scitation.org/doi/10.1063/1.445020}
+}
+@ARTICLE{Rapaport1983,
     author = {D. C. Rapaport},
     title = {{Hydrogen Bonds in Water: Network Organization and Lifetimes}},
     journal = {Mol. Phys.},
@@ -628,9 +639,10 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     volume = {64},
     number = {14},
     pages = {1686--1689},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.64.1686},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1686}
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevLett.64.1686},
+    url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1686},
+    abstract = {We analyze the distribution of bond lifetimes in simulations of liquid water using a novel bond definition. We find that the characteristic lifetimes of the bonds and of the gel network itself both increase strongly when temperature is decreased"and even appear to diverge at a temperature well below the freezing temperature"thereby providing an appealing physical picture of the anomalous behavior of water in the supercooled region. {\textcopyright} 1990 The American Physical Society.}
 }
 @ARTICLE{HX01,
     author = {H. Xu and B. J. Berne},
@@ -775,6 +787,19 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     year = {2004},
     volume = {120},
     pages = {8107}
+}
+@article{Chowdhary2008,
+   abstract = {The dynamics of hydrogen bond formation and breakage for water in the vicinity of water/hydrocarbon liquid interfaces is studied using molecular dynamics simulations. Several liquid alkanes are considered as the hydrocarbon phase in order to determine the effects of their chain length and extent of branching on the properties of the adjacent water phase. In addition to defining the interface location in terms of the laboratory-frame density profiles, the effects of interfacial fluctuations are considered by locating the interface in terms of the proximity of the molecules of the other phase. We find that the hydrogen bond dynamics of interfacial water is weakly influenced by the identity of the hydrocarbon phase and by capillary waves. In addition to calculating hydrogen bond time correlations, we examine how the hydrogen bond dynamics depend on local coordination and determine the extent of cooperativity in the population relaxation of the hydrogen bonds that a given molecule participates in. The contributio},
+   author = {Janamejaya Chowdhary and Branka M. Ladanyi},
+   doi = {10.1021/jp8061509},
+   issue = {13},
+   journal = {The Journal of Physical Chemistry B},
+   month = {11},
+   pages = {4045-4053},
+   publisher = {American Chemical Society},
+   title = {Hydrogen Bond Dynamics at the Water/Hydrocarbon Interface},
+   volume = {113},
+   year = {2008},
 }
 @ARTICLE{Corcelli05,
     author = {S. A. Corcelli and J. L. Skinner},
@@ -978,13 +1003,22 @@ URL = {
     volume = {266},
     pages = {137-147}
 }
-@ARTICLE{VPV09,
+@ARTICLE{Voloshin2009,
     author = {V. P. Voloshin and Yu. I. Naberukhin},
     title = {{Hydrogen Bond Lifetime Distributions in Computer-Simulated Water}},
     journal = {J. Structural Chem.},
     year = {2009},
     volume = {50},
     pages = {78-89}
+}
+@ARTICLE{Naberukhin2009,
+    author = {Yu. I. Naberukhin and V. P. Voloshin},
+    title = {{Distributions of Hydrogen Bond Lifetimes in Instantaneous and Inherent Structures of Water}},
+    journal = {Z. Phys. Chem.},
+    year = {2009},
+    volume = {223},
+    pages = {999-1011},
+    doi = {10.1524/zpch.2009.6062}
 }
 @ARTICLE{Mizoguchi92,
     author = {K. Mizoguchi and Y. Hori and Y. Tominaga},
@@ -2258,6 +2292,21 @@ URL = {http://www.pnas.org/content/103/42/15440.abstract},
 eprint = {http://www.pnas.org/content/103/42/15440.full.pdf},
 journal = {Proc. Natl. Acad. Sci.} 
 }
+@incollection{Radnai1995,
+title = "Structure and dynamics of solvated ions: New tendencies of research",
+editor = "Hiroyasu Nomura and Fumio Kawaizumi and Jack Yarwood",
+series = "Studies in Physical and Theoretical Chemistry",
+publisher = "Elsevier",
+volume = "83",
+pages = "229 - 236",
+year = "1995",
+booktitle = "Structure, Fluctuation, and relaxtion in solutions",
+issn = "0167-6881",
+doi = "https://doi.org/10.1016/S0167-6881(06)80781-0",
+url = "http://www.sciencedirect.com/science/article/pii/S0167688106807810",
+author = "Tamás Radnai",
+abstract = "Some recent developments in the research of the structure and dynamics of solvated ions are discussed. The solvate structure of lithium ion in dimethyl formamide and preliminary results on the structure of sodium chloride aqueous solutions under high pressures are presented to demonstrate the capabilities of the traditional X-ray diffraction method at new conditions. Perspectives of solution chemistry studies by combined methods as e.g. diffraction results with reverse Monte Carlo simulations, are also shown."
+}
 @article{TCS09b,
 author = {Tian, C. S. and Shen, Y. R.},
 title = {{Structure and Charging of Hydrophobic Material/Water Interfaces Studied by Phase-Sensitive Sum-Frequency Vibrational Spectroscopy}},
@@ -3521,12 +3570,13 @@ abstract = {A force field for water has been developed entirely from first princ
 a previously elusive objective. Precise knowledge of the intermolecular interactions in water will
         facilitate a better understanding of this ubiquitous substance.}
 }
-@ARTICLE{Willard10,
+@ARTICLE{Willard2010,
 author = {A. P. Willard and D. Chandler},
 title = {{Instantaneous Liquid Interfaces}},
 journal = {J. Phys. Chem. B },
 year = {2010},
-volume = {114 (5)},
+volume = {114},
+number = {5},
 pages = {1954},
 abstract={{We describe and illustrate a simple procedure for identifying a liquid interface from atomic coordinates. In particular, a coarse-grained density field is constructed, and the interface is defined as a constant density surface for this coarse-grained field. In applications to a molecular dynamics simulation of liquid water, it is shown that this procedure provides instructive and useful pictures of liquid-vapor interfaces and of liquid-protein interfaces. }}
 }
@@ -5172,38 +5222,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
        a hydrogen bond in liquid water at room temperature. We show that this dynamics is clearly
       nonexponential, yet virtually uncorrelated with the fluctuations of neighboring bonds. }}
 }
-@ARTICLE{DCR83,
-    author = {D. C. Rapaport},
-    title = {{Hydrogen Bonds in Water: Network Organization and Lifetimes}},
-    journal = {Mol. Phys.},
-    year = {1983},
-    volume = {50},
-    pages = {1151}
-}
-@ARTICLE{OC84,
-    author = {O. Conde and J. Teixeira},
-    title = {{Depolarized Light Scattering of Heavy Water, and Hydrogen Bond Dynamics}},
-    journal = {Mol. Phys.},
-    year = {1984},
-    volume = {53},
-    pages = {951}
-}
-@ARTICLE{JT85,
-    author = {J. Teixeira and M. C. Bellissent-Funel and S. H. Chen and A. J. Dianoux},
-    title = {{Experimental Determination of the Nature of Diffusive Motions of Water Molecules at Low Temperatures}},
-    journal = {Phys. Rev. A},
-    year = {1985},
-    volume = {31},
-    pages = {1913}
-}
-@ARTICLE{SHC86,
-    author = {S. H. Chen and J. Teixeira},
-    title = {{Structure and Dynamics of Low-Temperature Water as Studied by Scattering Techniques}},
-    journal = {Adv. Chem. Phys.},
-    year = {1986},
-    volume = {64},
-    pages = {1}
-}
 @ARTICLE{AG84,
     author = {A. Geiger and P. Mausbach and J. Schnitker and R. L. Blumberg and H. E. Stanley},
     title = {{Structure and Dynamics of the Hydrogen Bond Network in Water by Computer Simulations}},
@@ -5539,14 +5557,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     year = {2001},
     volume = {266},
     pages = {137-147}
-}
-@ARTICLE{VPV09,
-    author = {V. P. Voloshin and Yu. I. Naberukhin},
-    title = {{Hydrogen Bond Lifetime Distributions in Computer-Simulated Water}},
-    journal = {J. Structural Chem.},
-    year = {2009},
-    volume = {50},
-    pages = {78-89}
 }
 @ARTICLE{Mizoguchi92,
     author = {K. Mizoguchi and Y. Hori and Y. Tominaga},
@@ -7812,15 +7822,6 @@ abstract = {A force field for water has been developed entirely from first princ
 a previously elusive objective. Precise knowledge of the intermolecular interactions in water will
         facilitate a better understanding of this ubiquitous substance.}
 }
-@ARTICLE{Willard10,
-author = {A. P. Willard and D. Chandler},
-title = {{Instantaneous Liquid Interfaces}},
-journal = {J. Phys. Chem. B },
-year = {2010},
-volume = {114 (5)},
-pages = {1954},
-abstract={{We describe and illustrate a simple procedure for identifying a liquid interface from atomic coordinates. In particular, a coarse-grained density field is constructed, and the interface is defined as a constant density surface for this coarse-grained field. In applications to a molecular dynamics simulation of liquid water, it is shown that this procedure provides instructive and useful pictures of liquid-vapor interfaces and of liquid-protein interfaces. }}
-}
 @BOOK{Tuckerman10,
 author = {M. E. Tuckerman},
 title = {{Statistical Mechanics: Theory and Molecular Simulation }},
@@ -8905,10 +8906,8 @@ year = {1992},
 pages={433}
 }
 @ARTICLE{Sciortino1989,
-author = {Sciortino, F. and Fornili, S. L. and Bonding, H.},
+author = {Sciortino, F. and Fornili, S. L.},
 doi = {10.1063/1.455927},
-file = {:home/gang/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Sciortino, Fornili, Bonding - 2006 - interactions Hydrogen bond cooperativity in simulated water Time dependence analysis of pair inter.pdf:pdf},
-mendeley-groups = {HBD},
 journal = {J. Chem. Phys.},
 number = {5},
 title = {{Interactions Hydrogen Bond cooperativity in simulated water : Time dependence analysis of pair interactions}},
@@ -8959,6 +8958,29 @@ url = "http://www.sciencedirect.com/science/article/pii/S0301010411003247",
 author = "A. Nilsson and L.G.M. Pettersson",
 keywords = "Water, Structure, X-ray spectroscopy, X-ray scattering, Molecular dynamics simulations",
 abstract = "We present a picture that combines discussions regarding the thermodynamic anomalies in ambient and supercooled water with recent interpretations of X-ray spectroscopy and scattering data of water in the ambient regime. At ambient temperatures most molecules favor a closer packing than tetrahedral, with strongly distorted hydrogen bonds, which allows the quantized librational modes to be excited and contribute to the entropy, but with enthalpically favored tetrahedrally bonded water patches appearing as fluctuations, i.e. a competition between entropy and enthalpy. Upon cooling water the amount of molecules participating in tetrahedral structures and the size of the tetrahedral patches increase. The two local structures are connected to the liquid–liquid critical point hypothesis in supercooled water corresponding to high density liquid and low density liquid. We will discuss the interpretation of X-ray absorption spectroscopy, X-ray emission spectroscopy, wide and small angle X-ray scattering and molecular dynamics simulations in light of the current debate."
+}
+@ARTICLE{Ishikita2013 ,
+author = {H. Ishikita and K. Saito},
+title = {{Proton Transfer Reactions and Hydrogen-Bond Networks in Protein Environments}},
+journal = {J. R. Soc. Interface},
+year = {2013},
+volume = {11},
+number ={91},
+pages = {20130518},
+doi={10.1098/rsif.2013.0518},
+url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3869154/}
+}
+@article{Banerjee2016,
+author = {Banerjee, Puja  and Yashonath, Subramanian and Bagchi, Biman },
+title = {Coupled jump rotational dynamics in aqueous nitrate solutions},
+journal = {The Journal of Chemical Physics},
+volume = {145},
+number = {23},
+pages = {234502},
+year = {2016},
+doi = {10.1063/1.4971864},
+URL = {https://aip.scitation.org/doi/abs/10.1063/1.4971864},
+eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.4971864}
 }
 @ARTICLE{ ,
 author = {},
